# PSS_CUAS

./: .gitignore  README.md  camera_estimates.ipynb  camera_fps_spec_analysis.ipynb  pyproject.toml  requirements.txt  run_kinematics.py  stereo_camera_analysis.ipynb
analysis_reports/: CameraClassifier.py  camera_fps_spec_analysis.ipynb  fps_analysis_2.ipynb  stereo_camera_analysis.ipynb
analysis_supporting_code/: 577vsMAX.py  CameraClassifier.py  StereoCameraClassifier.py  lead_calcs.py
drone_footage/: leading_sim.py
drone_footage/20190925_111757_1_10_label/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+84 more)
src/analysis/: CameraClassifier.py  __init__.py
src/kinematics/: __init__.py  analysis.py  config.py  geometry.py  kenji_script.m  kinematics.py  kinematics_sim.py  linear_actuator.urdf  main.py  optimization.py  optimization_worker.py  pybullet1.py  pybullet2.py  setup_manager.py  timings_0.json  tube.urdf  ui.py  visualization.py
src/kinematics/actuator_setups/: default_setups.ini
